name:                aivika-gpss-test
version:             0.1.0.0
synopsis:            A test simulation model using GPSS-like DSL of Aivika
description:
    This test project defines a simulation model using the GPSS-like DSL off Aivika [1].
    .
    \[1] <http://www.aivikasoft.com>
    .
homepage:            https://github.com/dsorokin/aivika-gpss-test#readme
license:             BSD3
license-file:        LICENSE
author:              David Sorokin
maintainer:          david.sorokin@gmail.com
copyright:           (c) 2017. David Sorokin <david.sorokin@gmail.com>
category:            Simulation
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable aivika-gpss-test
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aivika
                     , aivika-transformers
                     , aivika-gpss
                     , mtl
  default-language:    Haskell2010

test-suite aivika-gpss-test-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aivika-gpss-test
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dsorokin/aivika-gpss-test
